- Version 0.6.3:
  - DOCX: Add paragraph spacing option.
  - DOCX: Fix image relationships for header/footer.
  - DOCX: columns support.
  - DOCX: Better units support for image size: '1in', '1em', '1cm', '1mm', '1pt', '1pc'.
  - Fixed the jpeg support.
- Version 0.6.2:
  - PPTX workaround for using placeholders + custom sizes + custom fills: the disableFillSettings setting.
- Version 0.6.1:
  - PPTX paragraph: more auto-fit options and more dots options.
  - PPTX shapes more options: you can now change y,x,cx and cy for ph shapes, title, desc, hidden, nvPrAttrCode and nvPrCode.
  - Better units support in pptx shapes: '1in', '1em', '1cm', '1mm', '1pt', '1pc'.
  - An option to change the view of a pptx document.
  - Fix: borderStyle does not work because of a typo.
  - More fonts support.
  - Some packages updates.
- Version 0.6.0:
  - Option to change the pptx master slide layout (right now only one master slides supported).
  - Add 'indentFirstLine' attribute for paragraph, 'indent' attribute for tables (Merge pull request #302).
  - Add some docx features (Merge pull request #301).
  - Some packages updates.
- Version 0.5.2:
  - Added a missing configuration option to the layout controls support in PowerPoint slides.
- Version 0.5.1:
  - Allow using layout controls in PowerPoint slides using the ph option of addText.
- Version 0.5.0:
  - Microsoft Word Document new features:
	- addText now have 2 new options: superscript and subscript (fixed issue #299).
  - Microsoft PowerPoint Document new features:
    - Custom layouts support.
    - Allow to insert direct xml code to a slide.
	- Allow using theme's colors in a slide object.
	- Documented how to change the theme.
	- More customizations to the slide's size (see the documentation).
  - Redesign the lib directory structure.
  - Some packages updates.
- Version 0.4.8:
  - Upgraded jszip to the last version.
  - Some packages updates.
  - xmlbuilder 11.0.1 migration.
  - Start cleaning the documentation.