@@ -66,9 +66,7 @@ pObj.addText('Align this text to the right.')
 
 pObj = docx.createP()
 
-pObj.addText('Those two lines are in the same paragraph,')
-pObj.addLineBreak()
-pObj.addText('but they are separated by a line break.')
+pObj.addText('Those two lines are in the same paragraph,\nbut they are separated by a line break.')
 
 docx.putPageBreak()
 
