@@ -108,24 +108,35 @@ MakeDocxP.prototype.setStyle = function(style_name) {
 MakeDocxP.prototype.addText = function(text_msg, opt, flag_data) {
   var newP = this
   var objNum = newP.data.length
-  newP.data[objNum] = {
-    text: text_msg,
-    options: opt || {},
-    ext_data: flag_data
-  }
+  var textMsg = text_msg.replace(/(?:\r\n|\r)/g, '\n').split('\n')
 
-  if ((opt || {}).link) {
-    var link_rel_id = newP.relsApp.length + 1
+  textMsg.forEach(function(value, index) {
+    newP.data[objNum] = {
+      text: value,
+      options: opt || {},
+      ext_data: flag_data
+    }
 
-    newP.relsApp.push({
-      type:
-        'http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink',
-      target: opt.link,
-      targetMode: 'External'
-    })
+    if ((opt || {}).link) {
+      var link_rel_id = newP.relsApp.length + 1
 
-    newP.data[objNum].link_rel_id = link_rel_id
-  }
+      newP.relsApp.push({
+        type:
+          'http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink',
+        target: opt.link,
+        targetMode: 'External'
+      })
+
+      newP.data[objNum].link_rel_id = link_rel_id
+      // line_break: true
+    } // Endif.
+
+    objNum++
+    if (index + 1 < textMsg.length) {
+      newP.addLineBreak()
+      objNum = newP.data.length
+    } // Endif.
+  })
 }
 
 /**
