@@ -1,4 +1,5 @@
 - Version 0.6.3:
+  - DOCX: addText() now supporting newline.
   - DOCX: Add paragraph spacing option.
   - DOCX: Fix image relationships for header/footer.
   - DOCX: columns support.
